4.72

- Added: More targets and side missions to the Chernarus 2020 version
- Added: AH-99 Blackfoot (Stub Wings)
- Fixed: Resources were subracted from dropped ammo boxes even if a player didn't take or change gear
- Fixed: Empty east groups in the Western Sahara version
- Fixed: Simplified enemy RPG force fire script to avoid stuttering, by longtime
- Changed: If d_servicepoint_building is an empty string it won't spawn the service point side buildings (the service point itself is still spawned)
- Changed: setUnitLoadOut change in 2.20 (switching weapons check)