@@ -758,6 +758,13 @@ class Params {
 		texts[] = {"$STR_DOM_MISSIONSTRING_922","$STR_DOM_MISSIONSTRING_1007"};
 	};
 	
+	class d_doairagdoll {
+		title = "$STR_DOM_MISSIONSTRING_2116";
+		values[] = {0,1};
+		default = 1;
+		texts[] = {"$STR_DOM_MISSIONSTRING_1007","$STR_DOM_MISSIONSTRING_922"};
+	};
+	
 	class d_del_crew_always {
 		title = "$STR_DOM_MISSIONSTRING_2062";
 		values[] = {0,1};
